# platform_external_gst_plugins_good

./: Android.mk
ext/soup/: Makefile.am
gst/alpha/: Makefile.am
gst/apetag/: Makefile.am
gst/audiofx/: Makefile.am
gst/auparse/: Makefile.am
gst/autodetect/: Makefile.am
gst/avi/: Makefile.am
gst/cutter/: Makefile.am
gst/debugutils/: Makefile.am
gst/deinterlace/: Makefile.am
gst/effectv/: Makefile.am
gst/equalizer/: Makefile.am
gst/flv/: Makefile.am
gst/flx/: Makefile.am
gst/goom/: Makefile.am
gst/goom2k1/: Makefile.am
gst/icydemux/: Makefile.am
gst/id3demux/: Makefile.am
gst/imagefreeze/: Makefile.am
gst/interleave/: Makefile.am
gst/isomp4/: Makefile.am
gst/law/: Makefile.am
gst/level/: Makefile.am
gst/matroska/: Makefile.am
gst/monoscope/: Makefile.am
gst/multifile/: Makefile.am
gst/multipart/: Makefile.am
gst/replaygain/: Makefile.am
gst/rtp/: Makefile.am
gst/rtpmanager/: Makefile.am
gst/rtsp/: Makefile.am
gst/shapewipe/: Makefile.am
gst/smpte/: Makefile.am
gst/spectrum/: Makefile.am
gst/udp/: Makefile.am
gst/videobox/: Makefile.am
gst/videocrop/: Makefile.am
gst/videofilter/: Makefile.am
gst/videomixer/: Makefile.am
gst/wavenc/: Makefile.am
gst/wavparse/: Makefile.am
gst/y4m/: Makefile.am
